Use SetMEWToActualWidth when we set the MEW to the actual width.  b=331684  r+sr=bzbarsky